# fintech_app

./: db.sqlite3  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_account_pin_number.py  0003_alter_account_pin_number.py  0004_kyc.py  0005_kyc_identity_image.py  0006_kyc_account_alter_kyc_date_of_birth.py
fintech_app/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: urls.py  views.py
main_app/templates/: about.html  base.html  contact.html  home.html
static/assets/js/: main.js
user_auths/: admin.py  forms.py  models.py  urls.py  views.py
user_auths/migrations/: 0001_initial.py
user_auths/templates/: sign-in.html  sign-up.html
