[tool.poetry]
name = "fintech-app"
version = "0.1.0"
description = ""
authors = ["anjoo91 <andrew.w.lew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-jazzmin = "^2.6.0"
django-shortuuidfield = "^0.1.3"
django-import-export = "^3.3.1"
sorl-thumbnail = "^12.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
